<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ballistitc WoD Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="tabata_settings">Tabata Settings</string>
    <string name="reps">Reps</string>
    <string name="rounds">Rounds</string>
    <string name="tabatas">Tabatas</string>
    <string name="done">Done</string>
    <string name="tabata">Tabata</string>
    <string name="ins_prompt">Inspection Time</string>
    <string name="reset">Reset</string>
    <string name="format">00:00:00</string>
    <string name="setinterval">Set Interval</string>
    <string name="setting">Settings</string>
    <string name="back">Back</string>
    <string name="result">Result</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="result_empty">No results to display</string>

    <string name="tabata_new">Tabata</string>
    <string name="countdown">Countdown</string>
    <string name="standard">Standard</string>
    <string name="interval">Interval</string>
    <string name="advanced_interval">Adv. Interval</string>
    <string name="reps_for_round">Reps For Round : </string>
    <string name="total">Total :</string>
    <string name="ballistic_title">Ballistitc WoD Timer</string>    
    <string name="results">Results</string>
    <string name="tap_to_cell">Tap Cell to Change Interval Time</string>
    <string name="add">Add</string>
    
    
   <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="emaisupport">Email Support</string>
    <string name="rate4time">Rate Ballistic WoD Timer in AppStore</string>
    <string name="armories">Armory</string>
    <string name="timers">Timers</string>
    <string name="preparationtime">Preparation Time</string>
    <string name="timervloume">Timer Volume</string>
    <string name="remote">Remote</string>
    <string name="remotecontrol">Remote Control</string>
    <string name="secs">0 secs</string>
    <string name="loopintervals">Loop Intervals:</string>
    
    <!-- About -->
    <string name="fourtimeversion">Ballistic WoD Timer Version</string>
    <string name="legal">Legal</string>
    <string name="legalText">\u00A9 2013 ballisticstash.co.uk \n All Rights Reserved  </string>
    <string name="version_number">Version number</string>
    <string name="versionname">1.0</string>
    
    <!-- Music -->
    <string name="music">Music</string>
    <string name="playlists">Playlists</string>
    <string name="tap_to_add_songs">Tap on \"Add\" button to add songs</string>

</resources>