<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog" >

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_nav" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/about"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />
       
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topLayout"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/fourtimeversion"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16sp" />

        <RelativeLayout
            android:id="@+id/aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/list_bg"
            android:padding="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/version_number"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/versionNoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/versionname"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/legal"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16sp" />
        
        <TextView
            android:id="@+id/legalText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/list_bg"
            android:gravity="center"
            android:text="@string/legalText"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="#FFFFFF" />
        
    </LinearLayout>

</RelativeLayout>