<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_height"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_nav" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/advanced_interval"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="@string/done"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/loopintervals"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_size_16sp" />

        <ToggleButton
            android:id="@+id/toggLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/togg_btn_selector"
            android:textOn=""
            android:textOff=""
            android:gravity="center"
            android:textColor="#00000000" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listTabataSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:fadingEdge="none"
        android:listSelector="@android:color/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tap_to_cell"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/text_size_16sp" />

    <ListView
        android:id="@+id/listTabataDynamic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:fadingEdge="none"
        android:listSelector="@android:color/transparent"
        android:visibility="gone" />

</LinearLayout>