<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_nav" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ballistic_title"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_Layout"
        android:layout_below="@+id/topLayout"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/standardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/standard_selector" />

        <ImageView
            android:id="@+id/countdownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/home_top_margin"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/countdown_selector" />

        <ImageView
            android:id="@+id/intervalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/home_top_margin"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/interval_selector" />

        <ImageView
            android:id="@+id/advBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/home_top_margin"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/adv_interval_selector" />

        <ImageView
            android:id="@+id/tabataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/home_top_margin"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/tabata_selector" />
    </LinearLayout>

    <!--  -->

    <LinearLayout
        android:id="@+id/bottom_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bottom_menu_bg" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="50dp"
            android:layout_weight="50"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/music"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/music"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_weight="50"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/setting"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/setting"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

</RelativeLayout>